# python-task-worker

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: dashboard.py
examples/: demo.py  quickstart.py
tasks/: cleanup_tasks.py  data_tasks.py  email_tasks.py  notification_tasks.py
workers/: celery_app.py
