[project]
name = "task-worker"
version = "1.0.0"
description = "Celery task worker — Redis broker, task routing, retries, scheduling, monitoring, dead letter queue, FastAPI dashboard"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
]
